modules/gdscript/tests/scripts/runtime/errors/cast_object_to_int.gd
func test():
	var object: Variant = RefCounted.new()
	@warning_ignore("unsafe_cast")
	print(object as int)
